# git-assist

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
apps/api/: __init__.py  answer.py  app.py  asgi.py  impact.py  main.py  retrieve.py  service.py
apps/worker/: __init__.py  asgi.py  index.py  main.py  materialize.py  pipeline.py
scripts/: gitlab_setup.py
