[project]
name = "git-assist"
version = "0.0.0"
description = "LLM+RAG assistant over a monorepo: NL code/doc/config search + commit impact analysis."
requires-python = ">=3.12"
# Runtime deps are added per-spec by the build loop, never speculatively.
dependencies = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "qdrant-client>=1.12",
    "tree-sitter>=0.25",
    "tree-sitter-python>=0.25",
    "tree-sitter-go>=0.25",
    "tree-sitter-typescript>=0.23",
    "neo4j>=5",
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = ["ruff", "mypy"]
# Postgres driver — only needed to connect a live database, never to import `common`.
postgres = ["psycopg2-binary"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["packages/common"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["packages", "apps"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
mypy_path = "packages:apps"
explicit_package_bases = true
namespace_packages = true
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unreachable = true
disallow_any_generics = true
no_implicit_reexport = true

# uvicorn is a runtime-only server dep (imported lazily inside worker.main); not
# installed in the gate venv, so let mypy resolve the import as Any.
[[tool.mypy.overrides]]
module = "uvicorn"
ignore_missing_imports = true
